--- a/versions.gradle
+++ b/versions.gradle
@@ -44,6 +44,7 @@ versions.timber = "4.7.1"
 versions.transition = "1.3.0"
 versions.truth = "1.0.1"
 versions.work = "2.2.0"
+versions.location = "17.0.0"
 ext.versions = versions
 
 def build_versions = [:]
@@ -170,6 +171,13 @@ room.rxjava2 = "androidx.room:room-rxjava2:$versions.room"
 room.testing = "androidx.room:room-testing:$versions.room"
 deps.room = room
 
+def work = [:]
+work.runtime = "androidx.work:work-runtime:$versions.work"
+work.testing = "androidx.work:work-testing:$versions.work"
+work.firebase = "androidx.work:work-firebase:$versions.work"
+work.runtime_ktx = "androidx.work:work-runtime-ktx:$versions.work"
+deps.work = work
+
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 
 deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
@@ -180,12 +188,7 @@ deps.transition = "androidx.transition:transition:$versions.transition"
 
 deps.truth = "com.google.truth:truth:$versions.truth"
 
-def work = [:]
-work.runtime = "androidx.work:work-runtime:$versions.work"
-work.testing = "androidx.work:work-testing:$versions.work"
-work.firebase = "androidx.work:work-firebase:$versions.work"
-work.runtime_ktx = "androidx.work:work-runtime-ktx:$versions.work"
-deps.work = work
+deps.location = "com.google.android.gms:play-services-location:$versions.location"
 
 ext.deps = deps
 
